// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests on <GifExpertApp /> should return component correctly 1`] = `
<Fragment>
  <div
    className="container mx-auto pb-16"
  >
    <h2
      className="text-2xl font-bold leading-7 text-gray-900 sm:text-3xl sm:truncate my-8"
    >
      Gif's Application
    </h2>
    <AddCategory
      setCategories={[Function]}
    />
    <hr />
  </div>
  <Footer />
</Fragment>
`;

exports[`tests on <GifExpertApp /> should show a category list 1`] = `
<Fragment>
  <div
    className="container mx-auto pb-16"
  >
    <h2
      className="text-2xl font-bold leading-7 text-gray-900 sm:text-3xl sm:truncate my-8"
    >
      Gif's Application
    </h2>
    <AddCategory
      setCategories={[Function]}
    />
    <hr />
    <GifGrid
      category="squartle"
      key="squartle"
    />
    <GifGrid
      category="pokemon"
      key="pokemon"
    />
  </div>
  <Footer />
</Fragment>
`;
